# node-wiring-c

./: .travis.yml  CMakeLists.txt  README.md  deploy.cmake  deployment.json
echo_server/: CMakeLists.txt
echo_server/private/src/: activator.c  export_command.c  send_command.c
echo_server/public/include/: export_command.h  send_command.h
node_discovery/: CMakeLists.txt  deploy.cmake
node_discovery/private/include/: etcd.h  etcd_watcher.h  node_description_impl.h  node_description_writer.h  node_discovery_impl.h  wiring_endpoint_writer.h
node_discovery/private/src/: etcd.c  etcd_watcher.c  node_description.c  node_description_writer.c  node_discovery.c  node_discovery_activator.c  wiring_endpoint_description.c  wiring_endpoint_reader.c  wiring_endpoint_writer.c
node_discovery/public/include/: node_description.h  node_discovery.h
remote_service_admin/: CMakeLists.txt
remote_service_admin/private/include/: remote_service_admin_impl.h
remote_service_admin/private/src/: endpoint_description.c  export_registration_impl.c  import_registration_impl.c  remote_proxy_factory_impl.c
remote_service_admin/public/include/: remote_service_admin.h
remote_service_admin_inaetics/: CMakeLists.txt
remote_service_admin_inaetics/private/include/: remote_service_admin_inaetics_impl.h
remote_service_admin_inaetics/private/src/: remote_service_admin_activator.c  remote_service_admin_impl.c
remote_service_admin_inaetics/public/include/: remote_service_admin_inaetics.h
wiring_admin/: CMakeLists.txt
wiring_admin/private/include/: civetweb.h  wiring_admin_impl.h
wiring_admin/private/src/: wiring_admin_activator.c  wiring_admin_impl.c
wiring_common/private/include/: wiring_common_utils.h
wiring_common/private/src/: wiring_common_utils.c  wiring_endpoint_description.c
wiring_common/public/include/: wiring_admin.h  wiring_endpoint_description.h  wiring_endpoint_listener.h  wiring_topology_manager.h
wiring_endpoint/public/include/: wiring_admin.h  wiring_endpoint_description.h
wiring_topology_manager/: CMakeLists.txt
wiring_topology_manager/private/include/: wiring_topology_manager.h  wiring_topology_manager_impl.h
wiring_topology_manager/private/src/: wiring_topology_manager.c  wiring_topology_manager_activator.c  wtm.c  wtm_activator.c  wtm_wadmin_tracker.c  wtm_wendpointlistener_tracker.c
